--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-cek-ongkir",
+  "name": "dot-fe-test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -31,7 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "client": "npm start",
-    "server": "nodemon api/server.js"
+    "auth-server": "nodemon api/server.js"
   },
   "eslintConfig": {
     "extends": [
